# phd2

./: .clang-format  .gitignore  CMakeLists.txt  COMPLETED_TODO_FEATURES.md  ChangeLog  DARK_LIBRARY_COMPLETE_IMPLEMENTATION.md  DARK_LIBRARY_IMPLEMENTATION.md  DEFECT_MAP_IMPLEMENTATION.md  GC_USBST4.cpp  GC_USBST4.h  INSTALL  LICENSE.txt  MacOSXBundleInfo.plist.in  PHD-Info.plist  PHD.cbp  PHD.layout  POLAR_ALIGNMENT_COMPLETE_SUMMARY.md  POLAR_ALIGNMENT_IMPLEMENTATION.md  README-PHD2.txt  README-PHD2.txt.in  README-Release.txt  README-building-phd2-for-windows.txt  README.MSVC  README.md  README.txt  Refine_DefMap.cpp  Refine_DefMap.h  UDPGuidingInteraction.h  about_dialog.cpp  advanced_dialog.cpp  advanced_dialog.h  ascom.cpp  ascom_common.h  aui_controls.cpp  aui_controls.h  backlash_comp.cpp  backlash_comp.h  build_with_xmake.sh  calibration_assistant.cpp  calibration_assistant.h  (+375 more)
branches/new_build_system/: .gitignore  CMakeLists.txt  README-INSTALL.txt  about_dialog.cpp  calreview_dialog.cpp  calstep_dialog.cpp  cam_LEwebcam.cpp  cam_MeadeDSI.h  cam_OSPL130.cpp  cam_QHY5IIbase.cpp  cam_WDM.h  cam_firewire.h  cam_firewire_OSX.cpp  cam_opencv.h  cam_qhy5.cpp  camcal_import_dialog.h  camera.cpp  cameras.h  config_INDI.cpp  configdialog.cpp  confirm_dialog.h  debuglog.h  event_server.cpp  fitsiowrap.h  graph.cpp  graph.h  guide_algorithm_hysteresis.cpp  guider.cpp  guider_onestar.cpp  guiding_assistant.cpp  guiding_assistant.h  guidinglog.cpp  image_math.h  messagebox_proxy.h  mount.cpp  myframe.cpp  myframe_events.cpp  nudge_lock.cpp  phd.cpp  phd.h  (+17 more)
branches/new_build_system/PHD.xcodeproj/: project.pbxproj
branches/new_build_system/cam_KWIQGuider/: KWIQGuider.cpp  KWIQGuider_priv.h
branches/new_build_system/help/: Basic_use.htm  Darks_BadPixel_Maps.htm
branches/new_build_system/icons/: brain1.xpm  cam_setup_disabled.png.h  connected.xpm  loop.png.h
branches/new_build_system_new_guiding_algorithm_merge_from_trunk2/: CMakeLists.txt  PHD_OSX_icon.icns  README-PHD2.txt  UDPGuidingInteraction.cpp  calreview_dialog.cpp  cam_SACGuide.cpp  cam_SBIG.cpp  cam_SSAG.cpp  cam_SSPIAG.cpp  cam_SXV.h  cam_Starfish.cpp  cam_WDM.h  cam_ascomlate.h  cam_firewire_OSX.cpp  camera.cpp  cameras.h  comdispatch.cpp  comet_tool.h  darks_dialog.cpp  drift_tool.h  eegg.cpp  gear_dialog.h  guide_algorithm_gaussian_process.cpp  guide_algorithm_gaussian_process.h  guide_algorithms.h  guidinglog.h  image_math.h  manualcal_dialog.cpp  messages.po  mount.cpp  phd.vcxproj  phd2.iss  point.h  rotator_ascom.cpp  scope.h  serialport.h  serialport_mac.h  serialport_win32.h  star.h  stepguider.cpp  (+1 more)
branches/new_build_system_new_guiding_algorithm_merge_from_trunk2/gaussian_process/: CMakeLists.txt
branches/new_build_system_new_guiding_algorithm_merge_from_trunk2/help/: Advanced_settings.htm  Tools.htm  Visualization.htm
branches/new_build_system_new_guiding_algorithm_merge_from_trunk2/icons/: AltArrow.xpm
branches/zwo_linux/: CMakeLists.txt  about_dialog.cpp  cam_QHY5IIbase.cpp  cam_SACGuide.cpp  cam_WDM.h  cam_openssag.cpp  camera.cpp  cameras.h  gear_dialog.h  phd.cpp  phd.h  scope.cpp  scope_gpint.cpp  scope_gpusb.cpp  worker_thread.cpp
contributions/MPI_IS_gaussian_process/: CMakeLists.txt  README.md
contributions/MPI_IS_gaussian_process/src/: covariance_functions.cpp  covariance_functions.h  gaussian_process.cpp  gaussian_process.h  gaussian_process_guider.cpp  gaussian_process_guider.h  parameter_priors.cpp  parameter_priors.h
phd2py/: CHANGELOG.md  LICENSE  PACKAGE_SUMMARY.md  README.md  pyproject.toml  pytest.ini  setup_dev.py  test_package.py
phd2py/phd2py/: __init__.py  cli.py  client.py  config.py  events.py  exceptions.py  models.py  py.typed  utils.py
phd2py/tests/: __init__.py  test_client.py  test_events.py
tests/: CMakeLists.txt  README.md  README_EventServer_Tests.md  calibration_integration_tests.cpp  event_server_basic_test.cpp  event_server_mocks.cpp  event_server_performance_tests.cpp  mock_phd_components.cpp  run_all_tests.sh  run_calibration_tests.sh  simple_CMakeLists.txt  test_results_summary.md
tests/cpp/: CMakeLists.txt  EVENTSERVER_TESTS_SUMMARY.md  event_server_tests_CMakeLists.txt
tests/cpp/mocks/: event_server_mocks.h  (+1 more)
tests/python/: __init__.py  pytest.ini  requirements.txt
tests/scripts/: run_all_tests.sh  run_calibration_tests.sh  run_cpp_tests.sh  run_event_server_tests.sh  run_python_tests.sh  validate_calibration_api.py
trunk/: CMakeLists.txt  ChangeLog  GC_USBST4.cpp  GC_USBST4.h  INSTALL  Makefile  PHD-Info.plist  PHD.cbp  PHD.depend  PHD2_Readme.txt  PHD_2.0_Architecture.docx  README-PHD2.txt  README-building-phd2-for-windows.txt  Refine_DefMap.cpp  Refine_DefMap.h  about_dialog.cpp  advanced_dialog.cpp  advanced_dialog.h  ascom.cpp  ascom.h  calrestore_dialog.cpp  calreview_dialog.cpp  calsanity_dialog.cpp  calsanity_dialog.h  calstep_dialog.cpp  calstep_dialog.h  cam_Atik16.cpp  cam_INDI.cpp  cam_INDI.h  cam_INovaPLC.cpp  cam_LELXUSBWebcam.cpp  cam_LELXUSBWebcam.h  cam_LEParallelWebcam.cpp  cam_LESerialWebcam.cpp  cam_LEwebcam.cpp  cam_LEwebcam.h  cam_MeadeDSI.cpp  cam_NebSBIG.cpp  cam_NebSBIG.h  cam_OSPL130.cpp  (+180 more)
trunk/PHD.xcodeproj/: project.pbxproj  stark.mode1
trunk/cam_KWIQGuider/: KWIQGuider.cpp  KWIQGuider_priv.h
trunk/cameras/: ASICamera.h  ASICamera2.h  SXMacLib.h  ShoestringGPUSB_DLL.h  _SSAGIF.h  astroDLLQHY5V.h  astroDLLQHY5V.lib  linuxvideodevice.cpp  linuxvideodevice.h  vcap_v4l.h  vcap_vfw.h
trunk/cmake_modules/: FindCFITSIO.cmake  FindZWO.cmake
trunk/debian/: control
trunk/extras/: cam_SXV.h  cam_VFW.h
trunk/help/: Basic_use.htm  Guide_algorithms.htm  Introduction.htm  PHD2GuideHelp.hhc  Tools.htm  Trouble_shooting.htm  Visualization.htm
trunk/icons/: ao.xpm  cam2.xpm  cam_setup_disabled.png.h  guide.png.h  loop3.xpm  measure.xpm  phd2_48.png.h  sm_PHD.xpm  stop1.xpm
trunk/libindi/: base64.c  indi.c  indi.h  indigui.c  indigui.h  lilxml.h
trunk/libindiclient/: README  base64.c  indi.c  indi.h  indi_config.h  lilxml.c  lilxml.h
trunk/locale/: messages-old.pot  messages.pot
trunk/locales/: messages-old.pot
(+2218 files in other folders)
